# HexiRules

./: .gitignore  .gitmessage  .hexi_state.json  AGENTS.md  AI_RULES.txt  LICENSE  README.md  automaton.py  check_quality.py  cli.py  gui.py  hex_examples.py  hex_rules.py  main.py  main_old.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-server.txt  requirements.txt  run_tests.py  test_gui_constants.py  test_hex_rules.py  version.py
.githooks/: commit-msg
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_PROPOSAL.md  ARCHITECTURE_SERVER.md  ASCII_UI_MINI_FRAMEWORK.md  CLI_HOWTO.md  FUNCTIONAL_REQUIREMENTS.md  GUI_Testing_Instructions.md  HEXIOS_APPLICATION_MODEL.md  HEXIOS_WORLD_USE_CASES.md  REACT_MIGRATION_GUIDE.md  README.md  TEST_README.md  hex_rule_notation.md  hexios_layout.txt
src/: __init__.py  ascii_ui.py  automaton.py  cli.py  gui.py  hex_examples.py  hex_rules.py  main.py  version.py
src/app/: __init__.py  controller.py
src/application/: world_service.py
src/domain/: constants.py
src/infrastructure/: README.md
src/server/: __init__.py  app.py  run_server.py  schemas.py  session_manager.py
src/ui/: __init__.py  cells_panel.py  log_panel.py  panels.py  rules_panel.py  run_panel.py  world_panel.py
tests/: __init__.py  ascii_samples.py  test_ascii_renderer.py  test_ascii_ui.py  test_automaton.py  test_canvas.py  test_cli.py  test_gui_constants.py  test_hex_conway_equivalence.py  test_hex_rules.py  test_logic.py  test_rule_presets.py
tools/: check_quality.py  commit_msg_lint.py  diagnose_server.py  run_desktop.py  run_server.py  run_tests.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+35 files in other folders)
